// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Routing > initRouting() > Should check if endpoint supports an explicitly specified method 1`] = `
RoutingError({
  "cause": {
    "method": "get",
    "path": "/v1/user/retrieve",
  },
  "message": "Method get is not supported by the assigned Endpoint.",
})
`;

exports[`Routing > initRouting() > Should check if endpoint supports the method it's assigned to within DependsOnMethod 1`] = `
RoutingError({
  "cause": {
    "method": "post",
    "path": "/v1/user",
  },
  "message": "Method post is not supported by the assigned Endpoint.",
})
`;

exports[`Routing > initRouting() > Should prohibit DependsOnMethod for a route having explicit method 1`] = `
RoutingError({
  "cause": {
    "method": "get",
    "path": "/v1/user/retrieve",
  },
  "message": "Explicitly specified method can not be combined with DependsOnMethod.",
})
`;

exports[`Routing > initRouting() > Should prohibit ServeStatic for a route having explicit method 1`] = `
RoutingError({
  "cause": {
    "method": "get",
    "path": "/v1/user/retrieve",
  },
  "message": "Explicitly specified method can not be combined with ServeStatic.",
})
`;

exports[`Routing > initRouting() > Should prohibit duplicated routes 1`] = `
RoutingError({
  "cause": {
    "method": "get",
    "path": "/v1/test",
  },
  "message": "Route has a duplicate",
})
`;

exports[`Routing > initRouting() > Should prohibit nested routing within a route having explicit method 1`] = `
RoutingError({
  "cause": {
    "method": "get",
    "path": "/v1/user/retrieve",
  },
  "message": "Explicitly specified method can not be combined with nested routing.",
})
`;
